--- a/GameListApp/GameListApp/GameBoard.storyboard
+++ b/GameListApp/GameListApp/GameBoard.storyboard
@@ -99,6 +99,21 @@
             </objects>
             <point key="canvasLocation" x="1537" y="-1033"/>
         </scene>
+        <!--Game List Detail View Controller-->
+        <scene sceneID="H8r-Gs-lCl">
+            <objects>
+                <viewController storyboardIdentifier="gameListDetailViewController" id="6pE-l7-Aju" customClass="GameListDetailViewController" customModule="GameListApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="jeE-8l-8Ut">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="VjU-wx-C6O"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="R4s-qn-vMf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2602" y="-756"/>
+        </scene>
         <!--Game List Tabbar Controller-->
         <scene sceneID="FNT-wZ-sdX">
             <objects>
